--- a/style.css
+++ b/style.css
@@ -92,21 +92,58 @@ header {
 /* Footer styles */
 .horizontal-footer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px 2%;
-    background-color: #f2f2f2;
+    padding: 3px 2%;
+    background-color: white;
     box-sizing: border-box;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); 
 }
 
-.horizontal-footer .container {
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.social-media {
     display: flex;
     align-items: center;
 }
 
-.horizontal-footer a img {
-    margin: 0 5px;
+.social-icon {
+    margin: 0 10px;
+    width: 40px;
+    transition: transform 0.3s, filter 0.3s;
+    background-color:#70002e ;
 }
+
+.social-icon:hover {
+    transform: scale(1.1);
+    background-color: #ED8B00;
+    
+}
+
+.contact-info {
+    text-align: right;
+}
+
+.contact-info a {
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s;
+}
+
+.contact-info a:hover {
+color: #007BFF;
+}
+
 
 /* Section styles */
 .container {
