--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ header {
 }
 
 .social-icon {
-    margin: 0 10px;
+    margin: 0 5px;
     width: 40px;
     transition: transform 0.3s, filter 0.3s;
     background-color:#70002e ;
@@ -136,12 +136,21 @@ header {
 
 .contact-info a {
     text-decoration: none;
-    color: black;
+    color: #70002e;
     transition: color 0.3s;
 }
 
 .contact-info a:hover {
-color: #007BFF;
+color: #ED8B00;
+}
+
+.form-link a {
+    color: #70002e;
+    transition: color 0.3s;
+}
+
+.form-link a:hover {
+color: #ED8B00;
 }
 
 
@@ -185,7 +194,7 @@ color: #007BFF;
 
 .title .quote-text {
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.6;
 }
 
@@ -207,6 +216,22 @@ color: #007BFF;
 .goal-list ul {
     margin-top: 10px;
     list-style-type: disc; 
+}
+
+.apply .image-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.apply .quote-text {
+    margin-top: 20px;
+    font-size:18px;
+    line-height: 1.6;
+}
+
+.apply h1 {
+    font-size: 36px; 
+    margin-top: 20px; 
 }
 
 /* Main section styles */
@@ -280,4 +305,79 @@ main {
     height: 100%;
     object-fit: cover;
 
+}
+/* Form styles */
+p {
+    margin-bottom: 20px;
+}
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+label {
+    flex-basis: 40%;
+    text-align: right;
+    margin-right: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    flex-basis: 55%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+input[type="checkbox"] {
+    margin-left: 10px;
+}
+
+.inline-label {
+    margin-left: 5px;
+    flex-basis: auto;
+    text-align: left;
+}
+
+.form-divider {
+    margin: 20px 0;
+    border: 0;
+    border-top: 1px solid #ccc;
+}
+
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    color: white;
+    background-color: #70002e;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+    background-color: #ED8B00;
+}
+
+.form-group-checkbox {
+    display: flex;
+    align-items: center;
+}
+
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    flex-basis: 55%;
+}
+
+.checkbox-group label {
+    margin: 0 5px;
 }
