--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ input[type="tel"] {
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    margin-right: 100px;
 }
 
 input[type="checkbox"] {
@@ -381,3 +382,15 @@ input[type="checkbox"] {
 .checkbox-group label {
     margin: 0 5px;
 }
+
+textarea {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 5px;
+    resize: vertical;
+    margin-right: 100px;
+}
+
